--- a/signupPage.html
+++ b/signupPage.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="navbar.css" type="text/css" rel="stylesheet" />
         <link href="register.css" type="text/css" rel="stylesheet" />
-        <title>NJATH - ANWESHA 2k16 Registration</title>
+        <title>NJATH - ANWESHA 2k17 Registration</title>
         <script language="JavaScript" src="js/gen_validatorv31.js" type="text/javascript"></script>
     </head>
     <body>
@@ -17,7 +17,7 @@
                 <span>Leaderboard</span>
                 <span>View the Leaderboard</span>
             </a>
-            <a href="http://www.facebook.com/iit.njath/app_202980683107053">
+            <a href="https://apps.facebook.com/forumforpages/464686653559952/61cb4cc2-6449-4990-a445-9653c65ce60c/0">
                 <span>Forum</span>
                 <span>The Discussion Forum</span>
             </a>
