--- a/signupPage.html
+++ b/signupPage.html
@@ -66,12 +66,13 @@
                            class="<?php if (isset($error["component"]) && $error["component"] == "password") echo 'error-component'; ?>"/>
                 </p>
                 
+                <!--
                 <p>
                 <img src="captcha_code_file.php?rand=<?php echo rand(); ?>" id='captchaimg' ><br>
                 <label for='message'>Enter the code above here :</label><br>
                 <input id="6_letters_code" name="6_letters_code" type="text"><br>
                 <small>Can't read the image? click <a href='javascript: refreshCaptcha();'>here</a> to refresh</small>
-                </p>
+                </p>!-->
                 <p class="signin button"> 
                     <input type="submit" value="Sign up"/> 
                 </p>
@@ -91,12 +92,12 @@
             <?php
         }
         ?>
-        <script language='JavaScript' type='text/javascript'>
+        <!--<script language='JavaScript' type='text/javascript'>
         function refreshCaptcha()
         {
             var img = document.images['captchaimg'];
             img.src = img.src.substring(0,img.src.lastIndexOf("?"))+"?rand="+Math.random()*1000;
         }
-        </script>
+        </script>*/!-->
     </body>
 </html>
